archived/tests/interpreter/errors/undefined_function.mochi
let x = 1 as fun(): int
x()
